--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		location.href = "/index";   
+		location.href = "/login";   
 	</script>
 </body>
 </html>
